--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            minjie's blog
-description:      A jekyll theme. Because I scribble.
+description:      ''
 url:              # Site url, without a slash at the end.
 signoff:          # Your name.
 disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
